--- a/przybornik-szkolny-REMAKE/przybornik-szkolny-REMAKE.csproj
+++ b/przybornik-szkolny-REMAKE/przybornik-szkolny-REMAKE.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigHandler.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="FileHelper.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
