--- a/przybornik-szkolny-REMAKE/przybornik-szkolny-REMAKE.csproj
+++ b/przybornik-szkolny-REMAKE/przybornik-szkolny-REMAKE.csproj
@@ -35,6 +35,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,7 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigHandler.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="ConifgHelper.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="Menu.cs" />
@@ -60,6 +64,7 @@
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
